--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,5 @@
+@import 'https://code.highcharts.com/css/highcharts.css';
+
 header {
   background-color: blue;
 }
@@ -9,4 +11,16 @@ header {
 #main-map {
   height: 500px;
   width: 500px;
+}
+
+
+.highcharts-tooltip-box {
+	fill: grey;
+	fill-opacity: 0.6;
+	stroke-width: 0;
+}
+
+.highcharts-tooltip-text {
+	fill: white;
+	text-shadow: 0 0 3px black;
 }
