--- a/public/style.css
+++ b/public/style.css
@@ -1,16 +1,18 @@
 @import 'https://code.highcharts.com/css/highcharts.css';
 
 header {
-  background-color: blue;
+
 }
+
 #word-cloud {
 	min-width: 310px;
 	max-width: 800px;
 	margin: 0 auto;
 }
+
 #main-map {
-  height: 500px;
-  width: 500px;
+  height: 200px;
+  width: 200px;
 }
 
 
@@ -23,4 +25,10 @@ header {
 .highcharts-tooltip-text {
 	fill: white;
 	text-shadow: 0 0 3px black;
+}
+
+
+#cloudImage, #teacupImage {
+  width: 100px;
+  height: 100px;
 }
