--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,13 @@
 @import 'https://code.highcharts.com/css/highcharts.css';
 
-header {
-
+header, h1 {
+  font-family: 'Archivo Black', sans-serif;
 }
+
+h2, p {
+  font-family: 'Open Sans', sans-serif;
+}
+
 
 #word-cloud {
 	min-width: 310px;
