--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,12 @@ header, h1 {
 h2, p {
   font-family: 'Open Sans', sans-serif;
 }
-
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-end;
+}
 
 #word-cloud {
 	min-width: 310px;
