--- a/public/style.css
+++ b/public/style.css
@@ -14,6 +14,10 @@ h2, p {
   align-items: flex-end;
 }
 
+#display {
+  display: none;
+}
+
 #word-cloud {
 	min-width: 310px;
 	max-width: 800px;
@@ -21,8 +25,8 @@ h2, p {
 }
 
 #main-map {
-  height: 200px;
-  width: 200px;
+  height: 250px;
+  width: 250px;
 }
 
 
