--- a/public/style.css
+++ b/public/style.css
@@ -39,13 +39,13 @@ h2, p {
 
 
 .highcharts-tooltip-box {
-	fill: grey;
+	fill: white;
 	fill-opacity: 0.6;
 	stroke-width: 0;
 }
 
 .highcharts-tooltip-text {
-	fill: white;
+	fill: black;
 	text-shadow: 0 0 3px black;
 }
 .leaflet-popup-content-wrapper{
