--- a/public/style.css
+++ b/public/style.css
@@ -5,12 +5,12 @@ header, h1 {
 }
 
 #title {
-  border: 10px solid #1D84B5;
+  border-top: 10px solid #1D84B5;
+  border-bottom: 10px solid #1D84B5;
   border-radius: 8px;
-  padding: 10px;
 }
 
-h2, p {
+h2, p, select, label {
   font-family: 'Open Sans', sans-serif;
 }
 .container {
@@ -18,6 +18,13 @@ h2, p {
   flex-direction: row;
   justify-content: center;
   align-items: flex-end;
+}
+.column {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-wrap: nowrap;
+  align-items: center;
 }
 
 #image-weather-today {
@@ -27,14 +34,27 @@ h2, p {
 }
 
 #word-cloud {
-	min-width: 310px;
-	max-width: 600px;
+	min-width: 150px;
+	max-width: 300px;
+  height: 300px;
 	margin: 0 auto;
 }
 
 #main-map {
   height: 250px;
   width: 250px;
+}
+
+#sound-cloud {
+  margin-left: 80px;
+}
+
+.container#extras {
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  align-items: center;
 }
 
 
