--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,16 @@ header, h1, button {
   display: none;
   border-style: none;
 }
-
+#talking {
+  display: none;
+  width: 80px;
+  height: 80px;
+  margin: 15px;
+}
+.container#greet {
+  justify-content: space-around;
+  align-items: flex-start;
+}
 body {
   margin-top: 10px;
 }
@@ -71,8 +80,8 @@ h2, p, select, label {
   padding-left: 50px;
 }
 #image-weather-today {
-  width: 100px;
-  height: 100px;
+  width: 150px;
+  height: 150px;
 
 }
 
