--- a/public/style.css
+++ b/public/style.css
@@ -14,13 +14,15 @@ header, h1, button {
 }
 #talking {
   display: none;
-  width: 80px;
-  height: 80px;
+  width: 100px;
+  height: 100px;
   margin: 15px;
 }
 .container#greet {
   justify-content: space-around;
   align-items: flex-start;
+  margin-top: 10px;
+  border-radius: 6px;
 }
 body {
   margin-top: 10px;
@@ -33,10 +35,13 @@ body {
   font-size: 20px;
   font-family: 'Open sans', sans-serif;
   border-radius: 2px;
+  padding: 8px;
 }
 #city-label {
   display: none;
   padding: 25px;
+  margin: 25px;
+  border-radius: 7px;
 }
 #title {
   border-top: 10px solid #1D84B5;
