--- a/public/style.css
+++ b/public/style.css
@@ -48,6 +48,9 @@ body {
   border-top: 10px solid #1D84B5;
   border-bottom: 10px solid #1D84B5;
 }
+#subtitle {
+  font-size: 10px;
+}
 #footer {
   color: #E6E6EA;
 }
@@ -168,8 +171,8 @@ h2, h3, h4, p, select, label {
 }
 
 #teacupImage {
-  width: 100px;
-  height: 100px;
+  width: 50px;
+  height: 50px;
   margin-right: 15px;
   margin-left: 20px;
 }
