--- a/public/style.css
+++ b/public/style.css
@@ -11,13 +11,15 @@ header, h1, button {
 
 #preferred-weather {
   font-size: 20px;
-  margin-bottom: 25px;
+  margin-bottom: 10px;
+  text-align-last: center;
 }
 #talking {
   display: none;
   width: 100px;
   height: 100px;
   margin: 15px;
+  border-bottom: 3px solid #FED766;
 }
 .container#greet {
   justify-content: space-around;
@@ -32,7 +34,7 @@ body {
   font-size: 50px;
 }
 #name {
-  margin: 15px;
+  margin: 15px 10px 10px 10px;
   font-size: 20px;
   font-family: 'Open sans', sans-serif;
   border-radius: 2px;
@@ -173,6 +175,6 @@ h2, h3, h4, p, select, label {
 #teacupImage {
   width: 50px;
   height: 50px;
-  margin-right: 15px;
-  margin-left: 20px;
+  margin-right: 10px;
+  margin-left: 10px;
 }
